fixes and tweaks

--- a/components/app-shell.html
+++ b/components/app-shell.html
@@ -323,6 +323,7 @@
         
       },
       updateOrders: function(e) {
+        console.log("app-shell: order updater")
         this.needOrderUpdate = true;
       },
       filtersChanged: function(e) {
