--- a/components/cart-control.html
+++ b/components/cart-control.html
@@ -164,7 +164,7 @@
             that.fire('cart-resize', {cartSize: e.detail.response.cartSize});
           }, 1000);
           
-          //this.fire('order-resize');
+          this.fire('order-resize');
           
           
           
