--- a/components/order-card.html
+++ b/components/order-card.html
@@ -137,6 +137,7 @@
         staleOrders: {
           type: Boolean,
           notify: true,
+          reflectToAttribute: true,
           observer: 'onStaleOrders'
         },
         statusMessage: {
